Update package, src files add tests.
Update package, src files add tests.

--- a/src/app/templates/_partials/_body.jade
+++ b/src/app/templates/_partials/_body.jade
@@ -10,7 +10,7 @@ div
             a(href=github.homepage) Demo
           div
             span
-            b #{github.stargazers_count.toLocaleString() + ', '}
+            b #{github.stargazers_count}
             span
             | #{github.forks}, #{github.language}
           div.description= github.description
