Update routes.js, add apiclient, githubapiclient, update templates.
Update routes.js, add apiclient (abstraction to api calls),
githubapiclient (implementation of apiclient using github api), update
templates.

--- a/src/app/templates/_partials/_body.jade
+++ b/src/app/templates/_partials/_body.jade
@@ -2,7 +2,7 @@ h1 Hello #{name}
 div
     h3 I'm #[a(href='https://github.com/carloscuesta') @carloscuesta] at github.
     div.row
-      -each github in githubData
+      -each github in githubData.items
         div
           a(href=github.html_url): h4.github-title= github.name
           div.button-container
