Update app templates, styles, editorconfig,
Update app templates, styles, editorconfig, converted spaces to tabs,
added icons partial.

--- a/src/app/templates/_partials/_head.jade
+++ b/src/app/templates/_partials/_head.jade
@@ -1,5 +1,6 @@
-title #{title}
+title #{site.title}
 meta(name="description", content="#{description}")
 meta(charset="utf-8")
 meta(name="viewport", content="width=device-width, initial-scale=1.0")
 link(rel="stylesheet", type="text/css", href="style.css")
+link(rel="stylesheet", href="//cdn.jsdelivr.net/flexboxgrid/6.3.0/flexboxgrid.min.css", type="text/css")
