--- a/src/app/templates/index.jade
+++ b/src/app/templates/index.jade
@@ -3,4 +3,6 @@ html
     head
         include _partials/_head.jade
     body
+        include _partials/_icons.jade
+        include _partials/_header.jade
         include _partials/_body.jade
