--- a/src/app/styles/css/style.css
+++ b/src/app/styles/css/style.css
@@ -1,1 +1,1 @@
-h1{color:red !important}
+html,body{margin:0;padding:0;text-rendering:optimizeLegibility;font-family:'Helvetica'}.icon{display:inline-block;width:1.5rem;height:1.5rem;fill:currentColor}
