--- a/src/app/templates/_partials/_body.jade
+++ b/src/app/templates/_partials/_body.jade
@@ -1,13 +1,18 @@
-div
-    -each github in githubData.items
-      div
-        a(href=github.html_url): h4.github-title= github.name
-        div
-          a(href=github.html_url) Open repo
-          a(href=github.homepage) Demo
-        div
-          span
-          b #{github.stargazers_count}
-          span
-          | #{github.forks}, #{github.language}
-        div.description= github.description
+section.github
+    .wrap
+        .row
+            -each github in githubData.items
+                article.col-xs-12.col-sm-6.col-md-4
+                    a(href=github.html_url): h4.github-title= github.name
+                    div
+                      a(href=github.html_url) Open repo
+                      a(href=github.homepage) Demo
+                    div
+                      svg.icon.icon-star
+                        use(xlink:href="#icon-star")
+                      b #{github.stargazers_count},
+                      svg.icon.icon-fork
+                        use(xlink:href="#icon-fork")
+                      | #{github.forks}, #{github.language}
+                    div.description= github.description
+
