--- a/src/app/templates/_partials/_body.jade
+++ b/src/app/templates/_partials/_body.jade
@@ -4,13 +4,13 @@ section.github
             -each github in githubData.items
                 article.col-xs-12.col-sm-6.col-md-4
                     a(href=github.html_url): h4.github-title= github.name
-                    div
-                      a(href=github.html_url) Open repo
-                      a(href=github.homepage) Demo
+                    .github-btns
+                      a(href=github.html_url).btn Repo
+                      a(href=github.homepage).btn Demo
                     div
                       svg.icon.icon-star
                         use(xlink:href="#icon-star")
-                      b #{github.stargazers_count},
+                      span #{github.stargazers_count},
                       svg.icon.icon-fork
                         use(xlink:href="#icon-fork")
                       | #{github.forks}, #{github.language}
