Update templates, styles and staticData
Updated templates, styles and staticData, added aboutme section,
footer. Splitted _body partials into __partials.jade.

--- a/src/app/templates/_partials/_body.jade
+++ b/src/app/templates/_partials/_body.jade
@@ -1,18 +1,3 @@
-section.github
-    .wrap
-        .row
-            -each github in githubData.items
-                article.col-xs-12.col-sm-6.col-md-4
-                    a(href=github.html_url): h4.github-title= github.name
-                    .github-btns
-                      a(href=github.html_url).btn Repo
-                      a(href=github.homepage).btn Demo
-                    div
-                      svg.icon.icon-star
-                        use(xlink:href="#icon-star")
-                      span #{github.stargazers_count},
-                      svg.icon.icon-fork
-                        use(xlink:href="#icon-fork")
-                      | #{github.forks}, #{github.language}
-                    div.description= github.description
-
+include __aboutme.jade
+include __github.jade
+include _footer.jade
