--- a/src/app/styles/style.scss
+++ b/src/app/styles/style.scss
@@ -42,8 +42,22 @@ h5 {
     font-size: 1.125em
 }
 
+strong, b {
+	font-weight: 400;
+}
+
+p {
+	font-weight: 300;
+}
+
 .wrap {
 	max-width: 1140px;
+	margin: 0 auto;
+	padding: 0 1em;
+}
+
+.wrap-small {
+	max-width: 740px;
 	margin: 0 auto;
 	padding: 0 1em;
 }
@@ -56,6 +70,28 @@ h5 {
 
 section {
 	padding: 3em 1.5em;
+}
+
+header.site-header {
+	background-color: #1a1a1a;
+	color: $white;
+	padding: 8em;
+
+	.icon {
+		padding: .5em;
+		fill: rgba(255, 255, 255, .8);
+	}
+	.social {
+		margin-top: 1em;
+
+		.icon:hover {
+			fill: $white;
+		}
+	}
+}
+
+.heart {
+	color: $pink;
 }
 
 .github {
@@ -100,6 +136,16 @@ section {
 	margin: .25em 0 .65em;
 }
 
+.aboutme {
+	.bio {
+		padding: 1em 0.5em;
+	}
+	.avatar {
+		border-radius: 50%;
+		width: 14em;
+	}
+}
+
 .btn {
 	font-size: .8em;
 	margin-right: .5em;
@@ -111,26 +157,25 @@ section {
 	font-weight: 400;
 }
 
-header.site-header {
+footer {
 	background-color: #1a1a1a;
 	color: $white;
-	padding: 8em;
+	padding: 2em 1.5em;
+
+	.love {
+		font-size: .8em;
+	}
 
 	.icon {
-		padding: .5em;
 		fill: rgba(255, 255, 255, .8);
-	}
-	.social {
-		margin-top: 1em;
-
-		.icon:hover {
-			fill: $white;
-		}
+		width: 1.25em;
+		height: 1.25em;
+		padding:0 .5em;
 	}
 }
 
 @media(max-width: 768px) {
 	header.site-header {
-		padding: 4em 1.5em 4em 1.5em;
+		padding: 5em 1.5em 5em 1.5em;
 	}
 }
