--- a/src/app/templates/_partials/_head.jade
+++ b/src/app/templates/_partials/_head.jade
@@ -1,7 +1,9 @@
 title #{site.title}
-meta(name="description", content="#{description}")
+meta(name="description", content="#{site.description}")
+meta(name="author", content="#{me.name}")
 meta(charset="utf-8")
 meta(name="viewport", content="width=device-width, initial-scale=1.0")
+link(rel="canonical", href="http://carloscuesta.me")
 link(rel="stylesheet", type="text/css", href="style.css")
 link(rel="stylesheet", href="//cdn.jsdelivr.net/flexboxgrid/6.3.0/flexboxgrid.min.css", type="text/css")
 script.
