Update templates added assets folder
Update templates added assets folder

--- a/src/app/templates/_partials/__aboutme.jade
+++ b/src/app/templates/_partials/__aboutme.jade
@@ -5,4 +5,4 @@ section.aboutme
                 h3 Hi! I'm <b>#{me.name}</b>.
                 p !{me.aboutme}
             .col-xs-12.col-sm-4.center-xs
-                img.avatar(src="https://avatars.githubusercontent.com/u/7629661")
+                img.avatar(src="../assets/img/carloscuesta.jpg", alt="Carlos Cuesta")
