--- a/src/app/templates/_partials/__contact.jade
+++ b/src/app/templates/_partials/__contact.jade
@@ -1,6 +1,6 @@
-section.contact
-    a(href="mailto:crloscuesta@gmail.com")
-        .wrap-small
-            .row.middle-xs.center-xs
-                .col-xs-12.bio
-                    h3 #{me.mail}
+a(href="mailto:crloscuesta@gmail.com?subject=Hello")
+    section.contact
+            .wrap-small
+                .row.middle-xs.center-xs
+                    .col-xs-12
+                        h3 #{me.mail}
