Improve pagespeed, update templates
Created a new js directory inside of assets that servers static js
files such as googleanalytics.js (pagespeed improvement). Renamed and
organized the .jade template files. Modified app.js to use the js
static dir.

--- a/src/app/templates/_includes/_head.jade
+++ b/src/app/templates/_includes/_head.jade
@@ -14,5 +14,5 @@ link(rel="stylesheet", type="text/css", href="style.css")
 link(rel="canonical", href="http://carloscuesta.me")
 //- style include ../../styles/css/style.css
 script
-    include ../../scripts/fonts.js
+    include ../../assets/js/fonts.js
 
