--- a/src/app/templates/index.jade
+++ b/src/app/templates/index.jade
@@ -1,8 +1,8 @@
 doctype html
 html
     head
-        include _partials/_head.jade
+        include _includes/_head.jade
     body
-        include _partials/_icons.jade
-        include _partials/_header.jade
-        include _partials/_body.jade
+        include _includes/_icons.jade
+        include _includes/_header.jade
+        include _includes/_body.jade
