Update templates and styles
Update templates _github, _footer. Update styles for the site, modified
the colors.

--- a/src/app/templates/_includes/_footer.jade
+++ b/src/app/templates/_includes/_footer.jade
@@ -10,3 +10,5 @@ footer.center-xs
         a(href="https://es.linkedin.com/in/#{social.linkedin}")
             svg.icon.icon-linkedin
                 use(xlink:href="#icon-linkedin")
+script.
+    console.log('%cMade with '+'%c♥'+'%c by %cCarlos Cuesta%c\nhttp://github.com/carloscuesta\nhttp://twitter.com/crloscuesta', 'color:#455A64', 'color:#EC407A', 'color:#455A64', 'color:#455A64; font-weight:bold;', 'color:#EC407A');
