--- a/src/app/templates/_includes/_sections/_github.jade
+++ b/src/app/templates/_includes/_sections/_github.jade
@@ -5,8 +5,8 @@ section.github
                 article.col-xs-12.col-sm-6.col-md-4
                     a(href=github.html_url): h4.github-title= github.name
                     .github-btns
-                      a(href=github.html_url).btn Repo
-                      a(href=github.homepage).btn Demo
+                      a(href=github.html_url).btn.btn-repo Repo
+                      a(href=github.homepage).btn.btn-demo Demo
                     div
                       svg.icon.icon-star
                         use(xlink:href="#icon-star")
