--- a/src/app/styles/_partials/_vars.scss
+++ b/src/app/styles/_partials/_vars.scss
@@ -1,4 +1,7 @@
 $white: #ECEFF1;
-$primary: #303F9F;
+$primary: #455A64; //607D8B
+$accent: #FF5252;
 $yellow: #FFD600;
 $pink: #EC407A;
+$header-bg: #1a1a1a;
+$footer-bg: #1a1a1a;
