--- a/src/app/styles/style.scss
+++ b/src/app/styles/style.scss
@@ -76,7 +76,7 @@ section {
 }
 
 header.site-header {
-	background-color: #1a1a1a;
+	background-color: $header-bg;
 	color: $white;
 	padding: 8em;
 
@@ -124,7 +124,7 @@ header.site-header {
 	a {
 		color: $white;
 
-		&:hover {
+		.github-title:hover {
 			text-decoration: underline;
 		}
 	}
@@ -155,21 +155,33 @@ header.site-header {
 	display: inline-block;
 	line-height: 1;
 	padding: .5em;
-	border: 1px solid $white;
-	border-radius: 4px;
+	border-radius: 2px;
 	font-weight: 400;
+	text-decoration: none;
+	transition: all 0.3s ease-out;
+	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+
+	&:hover {
+		box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+	}
+}
+
+.btn-repo {
+	background-color: $accent;
+}
+
+.btn-demo {
+	background-color: #B0BEC5;
 }
 
 .contact {
-	background-color: #eee;
-
 	h3 {
 		margin-bottom: 0;
 	}
 }
 
 footer {
-	background-color: #1a1a1a;
+	background-color: $footer-bg;
 	color: $white;
 	padding: 2em 1.5em;
 
