Update templates and styles
Updated _head.jade and style.scss

--- a/src/app/styles/style.scss
+++ b/src/app/styles/style.scss
@@ -159,7 +159,7 @@ header.site-header {
 	font-weight: 400;
 	text-decoration: none;
 	transition: all 0.3s ease-out;
-	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+	//box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 
 	&:hover {
 		box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
