--- a/src/app/templates/_includes/_head.jade
+++ b/src/app/templates/_includes/_head.jade
@@ -10,9 +10,9 @@ meta(name="twitter:image:src", content="http://carloscuesta.me/#{me.avatar}")
 meta(name="twitter:creator", content="@crloscuesta")
 meta(name="twitter:url", content="http://carloscuesta.me")
 meta(name="twitter:title", content="Carlos Cuesta")
-link(rel="stylesheet", type="text/css", href="style.css")
 link(rel="canonical", href="http://carloscuesta.me")
-//- style include ../../styles/css/style.css
+style
+    include ../../styles/css/style.css
 script
     include ../../assets/js/fonts.js
 
