Update styles and templates
Updated styles and templates

--- a/src/app/styles/_partials/_vars.scss
+++ b/src/app/styles/_partials/_vars.scss
@@ -1,7 +1,10 @@
 $white: #ECEFF1;
 $primary: #455A64; //607D8B
 $accent: #FF5252;
+$accentlight: #FF8A80;
+$accentgray: #B0BEC5;
 $yellow: #FFD600;
 $pink: #EC407A;
 $header-bg: #1a1a1a;
 $footer-bg: #1a1a1a;
+$text: #37474F; // 263238
