--- a/src/app/templates/_includes/_head.jade
+++ b/src/app/templates/_includes/_head.jade
@@ -11,6 +11,7 @@ meta(name="twitter:creator", content="@crloscuesta")
 meta(name="twitter:url", content="http://carloscuesta.me")
 meta(name="twitter:title", content="Carlos Cuesta")
 link(rel="canonical", href="http://carloscuesta.me")
+//-link(rel="stylesheet", type="text/css", href="style.css")
 style
     include ../../styles/css/style.css
 script
