--- a/src/app/styles/style.scss
+++ b/src/app/styles/style.scss
@@ -10,10 +10,17 @@ html, body {
     font-size: 16px;
     line-height: 1.5;
     font-weight: 300;
+    color: $text;
 }
 
 a {
 	text-decoration: none;
+	color: $accent;
+	transition: color .1s ease-in-out;
+}
+
+a:hover {
+	color: $accentlight;
 }
 
 h1, h2, h3,  h4, h5, h6 {
@@ -159,7 +166,6 @@ header.site-header {
 	font-weight: 400;
 	text-decoration: none;
 	transition: all 0.3s ease-out;
-	//box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 
 	&:hover {
 		box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
@@ -171,7 +177,8 @@ header.site-header {
 }
 
 .btn-demo {
-	background-color: #B0BEC5;
+	background-color: $accentgray;
+	color: #455A64!important;
 }
 
 .contact {
