--- a/src/app/templates/_includes/_footer.jade
+++ b/src/app/templates/_includes/_footer.jade
@@ -11,4 +11,4 @@ footer.center-xs
             svg.icon.icon-linkedin
                 use(xlink:href="#icon-linkedin")
 script.
-    console.log('%cMade with '+'%c♥'+'%c by %cCarlos Cuesta%c\nhttp://github.com/carloscuesta\nhttp://twitter.com/crloscuesta', 'color:#455A64', 'color:#EC407A', 'color:#455A64', 'color:#455A64; font-weight:bold;', 'color:#EC407A');
+    console.log('%cMade with '+'%c♥'+'%c by %cCarlos Cuesta%c\nhttp://github.com/carloscuesta\nhttp://twitter.com/crloscuesta', 'font-size:16px;color:#455A64', 'font-size:16px;color:#EC407A', 'font-size:16px;color:#455A64', 'font-size:16px;color:#455A64; font-weight:bold;', 'color:#EC407A');
