Update project dirs, templates and styles
Moved all the static files generated to the static/ folder. Add views/
folder inside of templates, update styles and templates.

--- a/src/app/templates/_includes/_head.jade
+++ b/src/app/templates/_includes/_head.jade
@@ -13,7 +13,6 @@ meta(name="twitter:title", content="Carlos Cuesta")
 link(rel="canonical", href="http://carloscuesta.me")
 //-link(rel="stylesheet", type="text/css", href="style.css")
 style
-    include ../../styles/css/style.css
+    include ../../static/css/style.css
 script
-    include ../../assets/js/fonts.js
-
+    include ../../static/js/fonts.js
