Update app.js templates, added static data
Update carloscuesta.js, fonts.js (removed part of the script), added
static data robots.txt and sitemap.xml, update templates.

--- a/src/app/templates/_includes/_sections/_aboutme.jade
+++ b/src/app/templates/_includes/_sections/_aboutme.jade
@@ -5,4 +5,4 @@ section.aboutme
                 h3 Hi! I'm <b>#{me.name}</b>.
                 p !{me.aboutme}
             .col-xs-12.col-sm-4.center-xs
-                img.avatar(src="carloscuesta.jpeg", alt="Carlos Cuesta")
+                img.avatar(src="img/carloscuesta.jpeg", alt="Carlos Cuesta")
