--- a/src/app/templates/_includes/_body.jade
+++ b/src/app/templates/_includes/_body.jade
@@ -3,4 +3,4 @@ include _sections/_github.jade
 include _sections/_contact.jade
 include _footer.jade
 script.
-    (function(a,e,f,g,b,c,d){a.GoogleAnalyticsObject=b;a[b]=a[b]||function(){(a[b].q=a[b].q||[]).push(arguments)};a[b].l=1*new Date;c=e.createElement(f);d=e.getElementsByTagName(f)[0];c.async=1;c.src=g;d.parentNode.insertBefore(c,d)})(window,document,"script","ga.js","ga");ga("create","UA-67824860-3","auto");ga("send","pageview");
+    (function(a,e,f,g,b,c,d){a.GoogleAnalyticsObject=b;a[b]=a[b]||function(){(a[b].q=a[b].q||[]).push(arguments)};a[b].l=1*new Date;c=e.createElement(f);d=e.getElementsByTagName(f)[0];c.async=1;c.src=g;d.parentNode.insertBefore(c,d)})(window,document,"script","js/ga.js","ga");ga("create","UA-67824860-3","auto");ga("send","pageview");
