--- a/src/app/templates/_includes/_head.jade
+++ b/src/app/templates/_includes/_head.jade
@@ -11,8 +11,8 @@ meta(name="twitter:creator", content="@crloscuesta")
 meta(name="twitter:url", content="http://carloscuesta.me")
 meta(name="twitter:title", content="Carlos Cuesta")
 link(rel="canonical", href="http://carloscuesta.me")
-//-link(rel="stylesheet", type="text/css", href="style.css")
-style
+link(rel="stylesheet", type="text/css", href="style.css")
+//-style
     include ../../static/css/style.css
 script
     include ../../static/js/fonts.js
