Update styles and templates
Update styles and templates

--- a/src/app/styles/_partials/_vars.scss
+++ b/src/app/styles/_partials/_vars.scss
@@ -6,5 +6,5 @@ $accentgray: #B0BEC5;
 $yellow: #FFD600;
 $pink: #EC407A;
 $header-bg: #1a1a1a;
-$footer-bg: #1a1a1a;
+$footer-bg: #263238;
 $text: #37474F; // 263238
