--- a/src/app/templates/_includes/_sections/_contact.jade
+++ b/src/app/templates/_includes/_sections/_contact.jade
@@ -3,4 +3,4 @@ a(href="mailto:crloscuesta@gmail.com?subject=Hello")
             .wrap-small
                 .row.middle-xs.center-xs
                     .col-xs-12
-                        h3 #{me.mail}
+                        h3.mail #{me.mail}
