Update ghost, modify index, routes and config
dotenv.load() only happens when NODE_ENV is set to development (heroku
doesn’t need .dotenv). Added Disqus comment system to the blog.

--- a/src/app/ghost/content/themes/casper/post.hbs
+++ b/src/app/ghost/content/themes/casper/post.hbs
@@ -73,7 +73,9 @@
             </section>
 
         </footer>
-
+    <div id="disqus_thread"></div>
+	<script type="text/javascript">var disqus_shortname="carloscuesta",disqus_identifier="{{post.id}}";(function(){var a=document.createElement("script");a.type="text/javascript";a.async=!0;a.src="//"+disqus_shortname+".disqus.com/embed.js";(document.getElementsByTagName("head")[0]||document.getElementsByTagName("body")[0]).appendChild(a)})();</script>
+	<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     </article>
 </main>
 
