Update routes, apiclient, twitterapiclient and templates
Finished fetching data from the twitter api and rendering it through
the template files. See #1

--- a/src/app/templates/_includes/_body.jade
+++ b/src/app/templates/_includes/_body.jade
@@ -1,5 +1,6 @@
 include _sections/_aboutme.jade
 include _sections/_github.jade
+include _sections/_twitter.jade
 include _sections/_contact.jade
 include _footer.jade
 script.
