Add twitter text parsing, update dependencies
Add twitter text parsing using “twitter-text” to autoLink the hashtags,
mentions and links from the tweets.

Resolve #3.

--- a/src/app/templates/_includes/_sections/_twitter.jade
+++ b/src/app/templates/_includes/_sections/_twitter.jade
@@ -3,4 +3,4 @@ section.twitter
         .row
         h3 Twitter
         -each tweet in twitterData
-            p #{tweet.text}
+            p !{tweet}
