Add .codeclimate, update routes, styles and templates
Add .codeclimate, update routes, styles and templates

--- a/src/app/styles/style.scss
+++ b/src/app/styles/style.scss
@@ -190,6 +190,10 @@ header.site-header {
 	}
 }
 
+.ghost {
+	background-color: #f5f5f5;
+}
+
 footer {
 	background-color: $footer-bg;
 	color: $white;
