--- a/src/app/templates/_includes/_sections/_ghost.jade
+++ b/src/app/templates/_includes/_sections/_ghost.jade
@@ -1,6 +1,7 @@
-section.twitter
+section.ghost
     .wrap
-        .row.center-xs
+        h3 Blog
+        .row.middle-xs
             -each post in ghostData.posts
                 article.col-xs-12.col-sm-6.col-md-6
                     h4 #{post.title}
