--- a/src/app/templates/_includes/_header.jade
+++ b/src/app/templates/_includes/_header.jade
@@ -3,7 +3,7 @@ header.site-header.center-xs
     h3 #{me.bio}
     .social
         a(href="https://twitter.com/#{social.twitter}")
-            svg.icon.icon-linkedin
+            svg.icon.icon-twitter
                 use(xlink:href="#icon-twitter")
         a(href="https://github.com/#{social.github}")
             svg.icon.icon-github
