Update templates, styles and routes
Update styles and templates, new colors and template improvement. Set
tpl cache to true

--- a/src/app/styles/_partials/_vars.scss
+++ b/src/app/styles/_partials/_vars.scss
@@ -1,10 +1,10 @@
 $white: #ECEFF1;
-$primary: #455A64; //607D8B
-$accent: #FF5252;
-$accentlight: #FF8A80;
+$accent: #2196F3; //FF5252
+$accentlight: #64B5F6;
 $accentgray: #B0BEC5;
 $yellow: #FFD600;
 $pink: #EC407A;
-$header-bg: #1a1a1a;
-$footer-bg: #263238;
-$text: #37474F; // 263238
+$text: #616161; // 263238
+$whitesection: #f9f9f9;
+$blacksection: #232323;
+
