--- a/src/app/templates/_includes/_sections/_ghost.jade
+++ b/src/app/templates/_includes/_sections/_ghost.jade
@@ -1,6 +1,6 @@
 section.ghost
     .wrap
-        h3 Blog
+        h3 I write posts on my #[a(href='http://carloscuesta.me/blog') blog].
         .row.middle-xs
             -each post in ghostData.posts
                 article.col-xs-12.col-sm-6.col-md-6
