--- a/src/app/templates/_includes/_sections/_twitter.jade
+++ b/src/app/templates/_includes/_sections/_twitter.jade
@@ -1,7 +1,8 @@
 section.twitter
     .wrap
-        h3 I'm @crloscuesta on twitter
         .row
+            .col-xs-12
+                h3 I'm #[a(href='https://twitter.com/crloscuesta') @crloscuesta] on twitter.
             -each tweet in twitterData
                 article.tweet.col-xs-12.col-sm-6
-                    p !{tweet}
+                    h5 !{tweet}
