Update twitterapiclient, styles and templates
Update twitterapiclient #1 improved the tweet parsing with cache, added
retweet_count and favorite_count to the template. Added retweet and
like icon to _icons, updated styles.

--- a/src/app/styles/_partials/_vars.scss
+++ b/src/app/styles/_partials/_vars.scss
@@ -4,6 +4,7 @@ $accentlight: #64B5F6;
 $accentgray: #B0BEC5;
 $yellow: #FFD600;
 $pink: #EC407A;
+$green: #4CAF50;
 $text: #616161; // 263238
 $whitesection: #f8f8f8;
 $blacksection: #232323;
