--- a/src/app/templates/_includes/_sections/_twitter.jade
+++ b/src/app/templates/_includes/_sections/_twitter.jade
@@ -5,4 +5,11 @@ section.twitter
                 h3 I'm #[a(href='https://twitter.com/crloscuesta') @crloscuesta] on twitter.
             -each tweet in twitterData
                 article.tweet.col-xs-12.col-sm-6
-                    h5 !{tweet}
+                    h5 !{tweet.text}
+                    div
+                      svg.icon.icon-retweet
+                        use(xlink:href="#icon-retweet")
+                      span #{tweet.retweet_count}
+                      svg.icon.icon-heart
+                        use(xlink:href="#icon-heart")
+                      span #{tweet.favorite_count}
