--- a/src/app/templates/_includes/_sections/_github.jade
+++ b/src/app/templates/_includes/_sections/_github.jade
@@ -17,5 +17,5 @@ section.github
                         use(xlink:href="#icon-fork")
                       | #{github.forks}
                       if github.language
-                        |, #{github.language}
+                        b.language #{github.language}
                     div.description= github.description
