Update readme, package.json, 404.jade and app tests.
Removed form-data as dependency, added deployed heroku badge to readme,
add link to the sitemap at 404 error template, remove githubClient from
test/app.js.

--- a/src/app/templates/views/errors/404.jade
+++ b/src/app/templates/views/errors/404.jade
@@ -41,5 +41,5 @@ html
                         ul
                             li #[a(href="http://carloscuesta.me") Home]
                             li #[a(href="http://carloscuesta.me/blog") Blog]
-                            li #[a(href="") Sitemap]
+                            li #[a(href="http://carloscuesta.me/sitemap.xml") Sitemap]
                     h4 Error Code: 404
