--- a/src/app/templates/_includes/_sections/_ghost.jade
+++ b/src/app/templates/_includes/_sections/_ghost.jade
@@ -2,8 +2,11 @@ section.ghost
     .wrap
         .row
             .col-xs-12
-                h3 I write posts on my #[a(href='http://carloscuesta.me/blog') blog].
+                h3 I write posts on my #[a(href='/blog') blog].
             -each post in ghostData.posts
                 article.post.col-xs-12.col-sm-6
-                    h4 #{post.title}
-                    a(href="http://carloscuesta.me/blog#{post.url}") Read More
+                    a.title(href="/blog#{post.url}") #{post.title}
+                    span.tags
+                        -each tag in post.tags
+                            a(href="/blog/tag/#{tag.name}") #{tag.name}
+                    time(datetime="#{post.published_at}") #{post.published_at}
