--- a/src/app/templates/_includes/_sections/_github.jade
+++ b/src/app/templates/_includes/_sections/_github.jade
@@ -4,7 +4,7 @@ section.github
             .col-xs-12
                 h3 I'm #[a(href='https://github.com/carloscuesta') @carloscuesta] on github.
             -each github in githubData.items
-                article.col-xs-12.col-sm-6.col-md-4
+                article.repo.col-xs-12.col-sm-6.col-md-4
                     a(href=github.html_url): h4.github-title= github.name
                     .github-btns
                       a(href=github.html_url).btn.btn-repo Repo
